# GirlLifeLocalization

./: .env.example  .gitignore  .qsrclintrc  README.md  flet_main.py  main.py  pyproject.toml
.github/workflows/: runner.yml
apps/: __init__.py
apps/cli/: __init__.py  main.py
apps/flet/: __init__.py  editor.py  host.py  main.py  models.py  services.py  workbench.py  workbench_page.py
docs/: PROJECT_STRUCTURE.md  V2_REFACTOR_PLAN.md  V3_REFACTOR_PLAN.md  flet_codex_reference_official_fixed_v2.md
src/: __init__.py  build_service.py  cli.py  config.py  consts.py  error_reporter.py  file_manager.py  localization_manager.py  log.py  old_replacer.py  paratranz.py  paratranz_precheck.py  paratranz_sync.py  paths.py  pipeline.py  project_girl_life.py  qsrc_guard.py  qsrc_runtime_checker.py
src/config/: __init__.py  configuration.py  progress.py
src/core/: __init__.py  build.py  constants.py  editor.py  error_reporting.py  exceptions.py  localization.py  logging.py  paths.py  project.py  runtime.py
src/localization/: __init__.py  manager.py  paratranz.py  precheck.py  sync.py
src/model/: ParatranzData.py  __init__.py
src/models/: __init__.py  paratranz.py
src/parser/: __init__.py  antlr_runtime.py  generate_python_parser.py  qsrcLexer.g4  qsrcLexerBase.py  qsrcParser.g4
src/project/: __init__.py  girl_life.py
src/qsp_runtime/: __init__.py  build.py  ffi.py  runner.py
src/qsrc/: __init__.py  ast.py  config.py  context.py  errors.py  grammar.py  ignore.py  linter.py  parser.py  preprocess.py  statements.py  transform.py
src/runtime/: __init__.py  (+2 more)
(+9 files in other folders)
