[project]
name = "girllifelocalization"
version = "0.1.0"
description = "Girl Life / QSP 中文本地化流水线工具。"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "diff-match-patch>=20241021",
    "flet>=0.28.3",
    "flet-code-editor>=0.28.3",
    "httpx>=0.28.1",
    "lark>=1.2.2",
    "loguru>=0.7.3",
    "orjson>=3.11.8",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "thefuzz>=0.22.1",
    "tqdm>=4.67.3",
]

[project.scripts]
girllife-localization = "apps.cli.main:main"
girllife-localization-flet = "apps.flet.main:main"

[project.optional-dependencies]
dev = [
    "black>=25.0.0",
    "ruff>=0.8.0",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
    "data",
    "tmp",
    "src/0.9.8.1",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src", "apps"]
